welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {

	if(isBirthday)
	{
		speed = speed - 5;
	}

	return amende(speed);

	
}
def amende(speed:Int): Int = {
var amende = 0;
	if(speed > 60)
	{
		amende = 1;
	}
	if(speed > 80)
	{
		amende = 2;
	}

	return amende;	
}